--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-click==6.6
-Flask==0.11.1
-Flask-Script==2.0.5
-gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-Pillow>=3.3.2
-Werkzeug==0.11.10
-
+Click==7.0
+Flask==1.1.1
+Flask-Script==2.0.6
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Pillow==6.1.0
+Werkzeug==0.15.5
